--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filosofia</title>
+    <title>Escola de Tecnologia</title>
 </head>
 <body>
-    <header>
-        <h1> Site de Filosofia </h1>
-            <h2> especializado em conteúdos de filosofia </h2>
+    <header class="cabeçalho">
+        <h1>Escola de Tencologia</h1>
+            <h2> especializado em conteúdos de tecnologia educacional</h2>
     </header>
 </body>
 </html>
