--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabeçalho">
-        <h1>Escola de Tencologia</h1>
+        <h1 class="cabeçalho-título">Escola de Tencologia</h1>
             <h2> especializado em conteúdos de tecnologia educacional</h2>
     </header>
 </body>
