--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header class="cabeçalho">
+        <img src="/programador2.jpg">
         <h1 class="cabeçalho-título">Escola de Tencologia</h1>
             <h2> especializado em conteúdos de tecnologia educacional</h2>
     </header>
