--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabeçalho">
-        <img src="/image-removebg-preview.png" alt="capa de um livro">
+        <img class="cabeçalho-imagem" src="/image-removebg-preview.png" alt="capa de um livro">
         <h1 class="cabeçalho-título">Escola de Tencologia</h1>
             <h2> especializado em conteúdos de tecnologia educacional</h2>
     </header>
