--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <header class="cabeçalho">
         <img class="cabeçalho-imagem" src="/image-removebg-preview.png" alt="capa de um livro">
         <h1 class="cabeçalho-título">Escola de Tencologia</h1>
-            <h2> especializado em conteúdos de tecnologia educacional</h2>
+        <ul class="cabeçalho-lista">
+            <li>Página Principal</li>
+            <li>Quem somos</li>
+        </ul>
     </header>
 </body>
 </html>
